[package]
name = "nectar-manifest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Mantaray 1.0 content-addressed key-value manifest for Ethereum Swarm"
documentation = "https://docs.rs/nectar-manifest"
readme = "README.md"
keywords = ["swarm", "ethereum", "manifest", "mantaray", "key-value"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true }
arbitrary = { workspace = true, optional = true }
bytes.workspace = true
futures.workspace = true
nectar-file = { workspace = true }
nectar-primitives = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
arbitrary.workspace = true
# Self dev-dependency: exposes the `generators` module to integration tests.
nectar-manifest = { workspace = true, features = ["arbitrary"] }
nectar-primitives = { workspace = true, features = ["arbitrary"] }
nectar-testing = { workspace = true, features = ["fixtures"] }
proptest.workspace = true

[features]
default = [ "std" ]
# The value-model impls, the `generators` regime builders, the shared codec
# oracle and the stable seed replays. Never reachable from `default` or any
# shipped feature.
arbitrary = [
	"alloy-primitives/arbitrary",
	"dep:arbitrary",
	"nectar-file/arbitrary",
	"nectar-primitives/arbitrary",
	"std",
]
# Per-reference node encryption (deterministic key derivation, sealing and
# opening). The 64-byte ref representation is always available; this feature
# only adds the crypto over it, so a default build still decodes and
# re-serializes encrypted manifests losslessly. The crypto rides on
# always-available primitives (transcrypt, keccak, the ref types), so it enables
# no primitives feature and drags in no rng: the module is gated purely to keep
# the surface opt-in.
encryption = []
std = [
	"alloy-primitives/std",
	"bytes/std",
	"nectar-file/std",
	"nectar-primitives/std",
	"thiserror/std",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
