[package]
name = "nectar-mantaray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Mantaray manifest trie for Ethereum Swarm"
documentation = "https://docs.rs/nectar-mantaray"
readme = "README.md"
keywords = ["swarm", "ethereum", "manifest", "mantaray", "trie"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["map"] }
bitflags.workspace = true
bytes.workspace = true
futures.workspace = true
nectar-primitives = { workspace = true }
thiserror.workspace = true
serde_json.workspace = true
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
rand.workspace = true
serde_json.workspace = true

[[bench]]
name = "mantaray_bench"
harness = false

[features]
default = ["std"]
std = ["alloy-primitives/std", "thiserror/std", "serde_json/std", "rand", "nectar-primitives/std"]
serde = ["dep:serde", "alloy-primitives/serde"]
encryption = ["nectar-primitives/encryption"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
