[package]
name = "nectar-mantaray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Mantaray manifest trie for Ethereum Swarm"
documentation = "https://docs.rs/nectar-mantaray"
readme = "README.md"
keywords = ["swarm", "ethereum", "manifest", "mantaray", "trie"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["map"] }
bitflags.workspace = true
bytes.workspace = true
futures.workspace = true
nectar-primitives = { workspace = true }
thiserror.workspace = true
serde_json.workspace = true
arbitrary = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
criterion.workspace = true
nectar-primitives = { workspace = true, features = ["arbitrary"] }
rand.workspace = true
serde_json.workspace = true

[[bench]]
name = "mantaray_bench"
harness = false

[features]
default = [ "std" ]
std = [
	"alloy-primitives/std",
	"nectar-primitives/std",
	"rand",
	"serde_json/std",
	"thiserror/std",
]
# Valid-by-construction `arbitrary::Arbitrary` impls for `Node`, `Fork`,
# `Prefix`, `NodeType`, and `ObfuscationKey`, for structured (round-trip)
# fuzz targets.
arbitrary = [
	"alloy-primitives/arbitrary",
	"dep:arbitrary",
	"nectar-primitives/arbitrary",
	"std",
]
encryption = [ "nectar-primitives/encryption" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
