[package]
name = "nectar-mantaray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Mantaray manifest trie for Ethereum Swarm"
documentation = "https://docs.rs/nectar-mantaray"
readme = "README.md"
keywords = ["swarm", "ethereum", "manifest", "mantaray", "trie"]
categories = ["data-structures"]

[lints]
workspace = true

[dependencies]
alloy-primitives = { workspace = true, features = ["map"], optional = true }
bitflags = { workspace = true, optional = true }
bytes = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
nectar-primitives = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
arbitrary = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
criterion.workspace = true
# Registry-pinned legacy oracle for the submission-order differential gate:
# identical op sequences must produce byte-identical roots.
mantaray-old = { package = "nectar-mantaray", version = "=0.3.0" }
nectar-primitives = { workspace = true, features = ["arbitrary"] }
nectar-testing.workspace = true
proptest.workspace = true
rand.workspace = true
serde_json.workspace = true

# The encode/decode benches drive the raw node codec, so the bench target
# needs the hazmat surface: `cargo bench --features hazmat`.
[[bench]]
name = "mantaray_bench"
harness = false
required-features = ["hazmat"]

[features]
default = [ "rand", "std" ]
# The trie modules ride this feature until the primitives core builds
# bare-metal; without it only the metadata keys and the obfuscation key
# remain.
std = [
	"alloy-primitives?/std",
	"dep:alloy-primitives",
	"dep:bitflags",
	"dep:bytes",
	"dep:futures",
	"dep:nectar-primitives",
	"dep:serde_json",
	"dep:thiserror",
	"nectar-primitives?/std",
	"serde_json?/std",
	"thiserror?/std",
]
# Random obfuscation-key generation for encrypted manifests. Implies `std`.
rand = [ "dep:rand", "std" ]
# Valid-by-construction `arbitrary::Arbitrary` impls for `Node`, `Fork`,
# `Prefix`, `NodeType`, and `ObfuscationKey`, for structured (round-trip)
# fuzz targets.
arbitrary = [
	"alloy-primitives?/arbitrary",
	"dep:arbitrary",
	"nectar-primitives?/arbitrary",
	"std",
]
encryption = [ "nectar-primitives?/encryption" ]
# Raw node internals (the `hazmat` module) for fuzz harnesses and benches.
hazmat = [ "std" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
