[package]
name = "nectar-postage-issuer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Postage stamp issuing and signing for Ethereum Swarm"
documentation = "https://docs.rs/nectar-postage-issuer"
readme = "README.md"
keywords = ["swarm", "ethereum", "postage", "signing"]
categories = ["cryptography", "data-structures"]

[lints]
workspace = true

[dependencies]
nectar-postage = { workspace = true }
nectar-primitives = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
thiserror = { workspace = true }

# optional
alloy-signer-local = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }

[dev-dependencies]
futures = { workspace = true }
# The upload pipeline bench splits through the streaming engine and the
# rayon batch ingest.
nectar-file = { workspace = true, features = ["rayon"] }
nectar-testing = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true, features = ["getrandom"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[[bench]]
name = "sign"
harness = false
required-features = ["parallel"]

[[bench]]
name = "upload_pipeline"
harness = false
required-features = ["parallel"]

[features]
default = [ "std" ]

# Standard library support
std = [ "nectar-postage/std" ]

# Local key signing for testing and development
local-signer = [ "dep:alloy-signer-local", "std" ]

# Parallel signing operations using rayon
parallel = [
	"dep:rayon",
	"nectar-postage/parallel",
	"nectar-primitives/parallel",
	"std",
]

# Arbitrary trait implementations for property-based testing
arbitrary = [ "nectar-postage/arbitrary", "nectar-primitives/arbitrary", "std" ]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
