[package]
name = "nectar-postage-usage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Self-hosted postage batch utilization snapshots for Ethereum Swarm"
documentation = "https://docs.rs/nectar-postage-usage"
readme = "README.md"
keywords = ["swarm", "ethereum", "postage", "no_std"]
categories = ["no-std", "data-structures"]

[lints]
workspace = true

[dependencies]
nectar-postage = { workspace = true }
nectar-postage-issuer = { workspace = true }
nectar-primitives = { workspace = true }
alloy-primitives = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }

# optional
alloy-signer = { workspace = true, optional = true }
arbitrary = { workspace = true, optional = true }
auto_impl = { workspace = true, optional = true }
web-time = { workspace = true, optional = true }

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["getrandom"] }
arbitrary = { workspace = true }
alloy-signer-local = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = [ "std" ]

# Standard library support.
std = [
	"alloy-primitives/std",
	"nectar-postage-issuer/std",
	"nectar-postage/std",
	"thiserror/std",
]

# Valid-by-construction `arbitrary::Arbitrary` impls for `UsageTable`,
# `Mutability`, and `Snapshot`, for structured (round-trip) fuzz targets.
arbitrary = [
	"dep:arbitrary",
	"nectar-postage-issuer/arbitrary",
	"nectar-postage/arbitrary",
	"nectar-primitives/arbitrary",
	"std",
]

# Implements `nectar_postage_issuer::StampIssuer` for `SnapshotIssuer` so a
# snapshot can back a `BatchStamper` directly. The shared counter table that
# backs every usage table already comes from the issuer crate; this feature adds
# the `StampIssuer` adapter on top.
issuer = [ "std" ]

# Turns persist plans into signed single-owner chunks and stamps.
seal = [ "dep:alloy-signer", "std" ]

# High-level async facade (`BatchStamper`) that collapses the open / stamp /
# flush cross-machine roam into three calls. The consumer supplies the network
# through the `SnapshotSource` and `SnapshotSink` traits. Implies `seal` (it seals
# every persist) and `std` (it reads the wall clock for the seal timestamp).
client = [ "dep:auto_impl", "dep:web-time", "seal", "std" ]

[[example]]
name = "roam_between_machines"
required-features = ["client", "seal"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
