[package]
name = "nectar-postage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Postage stamp primitives for Ethereum Swarm"
keywords = ["swarm", "ethereum", "postage", "no_std"]
categories = ["no-std", "data-structures"]

[lints]
workspace = true

[dependencies]
nectar-primitives = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

# optional
serde = { workspace = true, optional = true }
alloy-signer-local = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
tokio = { workspace = true, optional = true, features = ["sync", "rt", "time"] }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "time"] }
alloy-signer-local = { workspace = true }

[[bench]]
name = "stamp"
harness = false
required-features = ["parallel", "streaming"]

[features]
default = ["std"]

# Standard library support. Enables BatchStore, BatchFactory, and timestamp functions.
std = ["nectar-primitives/std", "alloy-primitives/std", "thiserror/std", "serde?/std"]

# Serialization support with serde.
serde = ["dep:serde", "nectar-primitives/serde", "alloy-primitives/serde"]

# Local key signing for testing and development.
local-signer = ["dep:alloy-signer-local", "std"]

# Batch-collect parallel operations using rayon (sync, CPU-bound).
# Use this for simple cases where all results can fit in memory.
parallel = ["dep:rayon", "std"]

# Streaming parallel operations using tokio channels (async, IO-bound).
# Use this for large datasets with backpressure support.
# Requires parallel feature for ShardedIssuer.
streaming = ["dep:tokio", "std", "parallel"]
