[package]
name = "nectar-postage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Postage stamp primitives for Ethereum Swarm"
documentation = "https://docs.rs/nectar-postage"
readme = "README.md"
keywords = ["swarm", "ethereum", "postage", "no_std"]
categories = ["no-std", "data-structures"]

[lints]
workspace = true

[dependencies]
nectar-primitives = { workspace = true }
alloy-primitives = { workspace = true }
alloy-signer = { workspace = true }
byteorder = { workspace = true }
thiserror = { workspace = true }

# k256 with precomputed tables for faster ECDSA verification
k256 = { workspace = true }

# optional
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
arbitrary = { workspace = true, features = ["derive"], optional = true }
# wall clock for stamp issuance timestamps; std::time on native, browser clock
# on wasm32. Only needed with the `std` feature (the no_std path returns 0).
web-time = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-arbitrary-interop = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
alloy-signer-local = { workspace = true }
alloy-primitives = { workspace = true, features = ["getrandom", "arbitrary"] }
arbitrary = { workspace = true, features = ["derive"] }
nectar-primitives = { workspace = true, features = ["arbitrary"] }

[[bench]]
name = "verify"
harness = false
required-features = ["parallel"]

[features]
default = [ "std" ]

# Standard library support. Enables BatchStore, BatchFactory, and timestamp functions.
std = [
	"alloy-primitives/std",
	"dep:web-time",
	"nectar-primitives/std",
	"serde?/std",
	"thiserror/std",
]

# Serialization support with serde.
serde = [ "alloy-primitives/serde", "dep:serde", "nectar-primitives/serde" ]

# Parallel verification using rayon (sync, CPU-bound).
parallel = [ "dep:rayon", "nectar-primitives/parallel", "std" ]

# Arbitrary trait implementations and valid-by-construction generators for
# property-based testing and fuzzing.
arbitrary = [
	"alloy-primitives/arbitrary",
	"dep:arbitrary",
	"nectar-primitives/arbitrary",
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
