[package]
name = "nectar-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
## alloy crypto
# alloy-primitives noted below in architecture-dependent set of crates
alloy-signer.workspace = true
alloy-signer-local.workspace = true

## rust crypto
digest.workspace = true
generic-array.workspace = true

# Core dependencies
bytes.workspace = true
thiserror.workspace = true
once_cell.workspace = true
serde = { workspace = true, optional = true }

# synchronization
parking_lot = "0.12"

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true, optional = true }

# Only for non-WASM targets - removed the optional flag so it's always included
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy-primitives = { workspace = true, features = ["asm-keccak"] }
rayon.workspace = true

# Only for WASM-specific targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
alloy-primitives.workspace = true
wasm-bindgen.workspace = true
js-sys.workspace = true
getrandom.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary", "getrandom", "asm-keccak"] }

arbitrary = { workspace = true, features = ["derive"] }
criterion.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
rand.workspace = true

[features]
default = ["std"]
std = []
serde = ["dep:serde"]
arbitrary = [
	"std",
	"dep:rand",
	"dep:arbitrary",
]

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "proofs"
harness = false

[[bench]]
name = "address"
harness = false
