[package]
name = "nectar-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Core primitives for Ethereum Swarm: chunks, addresses, and binary merkle trees"
documentation = "https://docs.rs/nectar-primitives"
readme = "README.md"
keywords = ["swarm", "ethereum", "chunk", "bmt", "storage"]
categories = ["data-structures", "cryptography"]

[lints]
workspace = true

[dependencies]
## alloy crypto
# alloy-primitives noted below in architecture-dependent set of crates
alloy-signer.workspace = true
alloy-signer-local.workspace = true

## rust crypto
digest.workspace = true
hybrid-array.workspace = true

# derive macros
derive_more.workspace = true

# Core dependencies
bytes.workspace = true
thiserror.workspace = true
once_cell.workspace = true
serde = { workspace = true, optional = true }

# key material protection
subtle.workspace = true
zeroize = { workspace = true, features = ["derive"] }

# synchronization
parking_lot = "0.12"

# wall clock: std::time on native, browser clock on wasm32 (see Timestamp::now)
web-time.workspace = true

# async support
futures.workspace = true
tokio = { workspace = true, features = ["io-util"], optional = true }

# arbitrary
arbitrary = { workspace = true, features = ["derive"], optional = true }
rand = { workspace = true, optional = true }

# rayon for parallelism (works on both native and WASM via wasm-bindgen-rayon)
rayon.workspace = true

# Only for non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy-primitives = { workspace = true, features = ["asm-keccak", "getrandom"] }

# Only for WASM-specific targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
alloy-primitives = { workspace = true, features = ["getrandom"] }
wasm-bindgen.workspace = true
# Gated behind the `wasm-threads` feature (default-off). Its presence forces
# wasm-bindgen's threads transform, which requires a SharedArrayBuffer memory
# (and thus COOP/COEP cross-origin isolation on the hosting page). Omitting it
# yields a wasm that needs no shared memory; the plain `rayon` usage elsewhere
# then runs inline (no thread pool) on wasm.
wasm-bindgen-rayon = { version = "1.3", optional = true }
js-sys.workspace = true
getrandom.workspace = true
getrandom_02.workspace = true
# Pulls in the getrandom 0.4 "wasm_js" backend that alloy-primitives needs so
# B256::random (used by Nonce::random) links on wasm32-unknown-unknown.
getrandom_04.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary", "getrandom", "asm-keccak"] }

arbitrary = { workspace = true, features = ["derive"] }
criterion.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
rand.workspace = true

[features]
default = ["std"]
std = []
# WASM thread pool via wasm-bindgen-rayon. OFF by default so the default wasm
# build needs no SharedArrayBuffer / cross-origin isolation — letting it run on
# hosts that can't set COOP/COEP (e.g. the eth.limo ENS gateway). Enable it
# (`--features wasm-threads`) for the threaded build (faster BMT hashing, but
# requires shared memory). Must stay out of `default`: dependents pull this
# crate with default features, so a default-on threads feature would be forced
# on transitively and couldn't be opted out.
wasm-threads = ["dep:wasm-bindgen-rayon"]
serde = ["dep:serde"]
arbitrary = [
	"std",
	"dep:rand",
	"dep:arbitrary",
	"alloy-primitives/arbitrary",
]
encryption = ["dep:rand"]
tokio = ["dep:tokio"]

[[bench]]
name = "primitives"
harness = false

[[bench]]
name = "proofs"
harness = false

[[bench]]
name = "address"
harness = false

[[bench]]
name = "bmt_bench"
harness = false

[[bench]]
name = "file_bench"
harness = false

[[bench]]
name = "encryption_bench"
harness = false
required-features = ["encryption"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
