[package]
name = "nectar-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true
description = "Core primitives for Ethereum Swarm: chunks, addresses, and binary merkle trees"
documentation = "https://docs.rs/nectar-primitives"
readme = "README.md"
keywords = ["swarm", "ethereum", "chunk", "bmt", "storage"]
categories = ["data-structures", "cryptography"]

[lints]
workspace = true

[dependencies]
## alloy crypto
# alloy-primitives noted below in architecture-dependent set of crates
alloy-signer.workspace = true
alloy-signer-local.workspace = true

## rust crypto
digest.workspace = true
hybrid-array.workspace = true
k256 = { workspace = true, features = ["ecdh"] }
keccak-batch.workspace = true

# derive macros
derive_more.workspace = true

# Core dependencies
bytes.workspace = true
once_cell.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

# key material protection
subtle.workspace = true
zeroize = { workspace = true, features = ["derive"] }

# synchronization
parking_lot = "0.12"

# wall clock: std::time on native, browser clock on wasm32 (see Timestamp::now)
web-time.workspace = true

# arbitrary
arbitrary = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

# rayon for parallelism (works on both native and WASM via wasm-bindgen-rayon)
rayon.workspace = true

# Only for non-WASM targets
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
alloy-primitives = { workspace = true, features = ["asm-keccak", "getrandom"] }

# Only for WASM-specific targets
[target.'cfg(target_arch = "wasm32")'.dependencies]
alloy-primitives = { workspace = true, features = ["getrandom"] }
wasm-bindgen.workspace = true
# Gated behind the `wasm-threads` feature (default-off). Its presence forces
# wasm-bindgen's threads transform, which requires a SharedArrayBuffer memory
# (and thus COOP/COEP cross-origin isolation on the hosting page). Omitting it
# yields a wasm that needs no shared memory; the plain `rayon` usage elsewhere
# then runs inline (no thread pool) on wasm.
wasm-bindgen-rayon = { version = "1.3", optional = true }
js-sys.workspace = true
getrandom.workspace = true
getrandom_02.workspace = true
# Pulls in the getrandom 0.4 "wasm_js" backend that alloy-primitives needs so
# B256::random (used by Nonce::random) links on wasm32-unknown-unknown.
getrandom_04.workspace = true

[dev-dependencies]
alloy-primitives = { workspace = true, features = ["arbitrary", "getrandom", "asm-keccak"] }

arbitrary = { workspace = true }
futures.workspace = true
nectar-testing.workspace = true
proptest.workspace = true
proptest-arbitrary-interop.workspace = true
rand.workspace = true

[features]
default = [ "std" ]
std = []
# WASM thread pool via wasm-bindgen-rayon. OFF by default so the default wasm
# build needs no SharedArrayBuffer / cross-origin isolation — letting it run on
# hosts that can't set COOP/COEP (e.g. the eth.limo ENS gateway). Enable it
# (`--features wasm-threads`) for the threaded build (faster BMT hashing, but
# requires shared memory). Must stay out of `default`: dependents pull this
# crate with default features, so a default-on threads feature would be forced
# on transitively and couldn't be opted out.
wasm-threads = [ "dep:wasm-bindgen-rayon" ]
# Plain-terminology umbrella for "run in parallel", matching the `parallel`
# feature on nectar-postage and nectar-postage-issuer. Native builds already
# parallelize through rayon, so this is a no-op there; on wasm32 it opts into the
# wasm-bindgen-rayon thread pool by enabling `wasm-threads` (inheriting its
# shared-memory / cross-origin-isolation requirement). Reach for `parallel` to
# express intent; use `wasm-threads` directly only to toggle the wasm thread pool
# on its own.
parallel = [ "wasm-threads" ]
serde = [ "dep:serde" ]
arbitrary = [ "alloy-primitives/arbitrary", "dep:arbitrary", "dep:rand", "std" ]
encryption = [ "dep:rand" ]
# Single-thread send escape for non-wasm targets (e.g. zkVM guests): applies
# the wasm32 relaxation of MaybeSend/MaybeSync and the boxed error aliases on
# any target. An explicit feature rather than a target cfg so CI can exercise
# the relaxed shape off-wasm.
unsync = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
