# No [lints] table on purpose: the harness panics by design (budget
# exhaustion turns would-be hangs into failures), which the workspace
# restriction lints forbid.

[package]
name = "nectar-testing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Deterministic async test harness for the nectar workspace"
publish = false

[dependencies]
futures-executor.workspace = true

# The wasm smoke test is the executable proof that a !Send store satisfies the
# chunk traits on wasm32; the same store cannot compile on native targets.
[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
futures.workspace = true
nectar-file.workspace = true
nectar-primitives.workspace = true
wasm-bindgen-test.workspace = true
